--- a/examples/chat/Cargo.toml
+++ b/examples/chat/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1"
 env_logger = "0.10.0"
 futures = "0.3.28"
 libp2p = { path = "../../libp2p", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
+rand = "*"
 
 [lints]
 workspace = true
